<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.edu.ifsp.scl.transaction.details.TransactionDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/category_field_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@={viewModel.category}"
                tools:text="Category" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_field_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@={viewModel.title}"
                tools:text="Title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/value_field_placeholder"
            app:startIconDrawable="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@={viewModel.value}"
                tools:text="0.00" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accountTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/account_field_placeholder"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toStartOf="@+id/swapAccountsImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueTextInputLayout"
            app:layout_goneMarginRight="0dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@{viewModel.account}"
                tools:text="Account" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/swapAccountsImageButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/swap_accounts_description"
            android:src="@drawable/ic_swap_vert_black_24dp"
            android:tint="@color/material_on_background_emphasis_medium"
            app:goneElseVisibleWhen="@{!viewModel.transferFieldsShoulBeVisible}"
            app:layout_constraintBottom_toBottomOf="@+id/recipientAccountTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/accountTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipientAccountTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/recipient_account_field_placeholder"
            app:goneElseVisibleWhen="@{!viewModel.transferFieldsShoulBeVisible}"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toStartOf="@+id/swapAccountsImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountTextInputLayout"
            app:layout_goneMarginRight="0dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@{viewModel.recipientAccount}"
                tools:text="Recipient account" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_field_placeholder"
            app:startIconDrawable="@drawable/ic_event_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipientAccountTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@{viewModel.date}"
                tools:text="01/01/01" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frequencyTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/frequency_field_placeholder"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toStartOf="@+id/timesTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextInputLayout"
            app:layout_goneMarginRight="0dp"
            app:startIconDrawable="@drawable/ic_refresh_black_24dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{viewModel.frequency}"
                tools:text="Single" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timesTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/times_field_placeholder"
            app:startIconDrawable="@drawable/ic_linear_scale_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frequencyTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/dateTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{viewModel.times}"
                tools:text="0x" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>